--- a/source/_layouts/post.html
+++ b/source/_layouts/post.html
@@ -37,26 +37,26 @@ comments: true
     </div>
     <script type="text/javascript" src="http://v3.jiathis.com/code/jia.js?uid=1410511789165587" charset="utf-8"></script>
     <!-- JiaThis Button END -->
+  </footer>
+</article>
+
+{% if site.disqus_short_name and page.comments == true %}
+  <section>
+    <h1>评论</h1>
     <!-- UY BEGIN -->
     <div id="uyan_frame"></div>
     <script type="text/javascript" src="http://v2.uyan.cc/code/uyan.js"></script>
     <!-- UY END -->
-  </footer>
-</article>
-
-
-{% if site.disqus_short_name and page.comments == true %}
-
-
-
-  <section>
-    <h1>Comments</h1>
     <div id="disqus_thread" aria-live="polite">{% include post/disqus_thread.html %}</div>
   </section>
 {% endif %}
 {% if site.juvia_site_key and page.comments == true %}
   <section>
-    <h1>Comments</h1>
+    <h1>评论</h1>
+    <!-- UY BEGIN -->
+    <div id="uyan_frame"></div>
+    <script type="text/javascript" src="http://v2.uyan.cc/code/uyan.js"></script>
+    <!-- UY END -->
     <div id="juvia_thread" aria-live="polite">{% include post/juvia_thread.html %}</div>
   </section>
 {% endif %}
