添加Git学习之路文章

--- a/source/_layouts/default.html
+++ b/source/_layouts/default.html
@@ -8,6 +8,10 @@
       {{ content | expand_urls: root_url }}
     </div>
   </div>
+  <!-- UY BEGIN -->
+  <div id="uyan_frame"></div>
+  <script type="text/javascript" src="http://v2.uyan.cc/code/uyan.js?uid=1981242"></script>
+  <!-- UY END -->
   <footer role="contentinfo">{% include footer.html %}</footer>
   {% include after_footer.html %}
 </body>
